legible font color & fixed background clipping

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -26,12 +26,22 @@ body {
       position: relative;
       padding: 10px;
 
-      &[bgcolor] {
+      &.color {
+        .colorBackground {
+          position: absolute;
+          height: 100%;
+          width: 100%;
+          top: 0;
+          left: 0;
+          z-index: -1;
+        }
+
         .copyBtn {
           display: none;
           position: absolute;
           right: 0;
         }
+
         &:hover .copyBtn {
           display: initial;
         }
